# bil

./: .flake8  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  requirements.txt  run-dev.sh
.github/workflows/: ci.yml
api/: README.md  datamodels.py  dbfile.py  dbsql.py  main.py  pyproject.toml  test_dbfile.py
api/bil/: datamodels.py  dbfile.py  main.py  test_dbfile.py
api/bil/tests/: conftest.py  test_paygroups.py  test_payments.py  test_projects.py
bil-ui/: .eslintrc.js  README.md  package.json  vue.config.js
bil-ui/src/: App.vue  main.js  registerServiceWorker.js  service.js  webauth.js
bil-ui/src/assets/: constants.js  main.css
bil-ui/src/components/: DarkToggle.vue  DeleteProject.vue  GroupTotals.vue  NewPaygroup.vue  NewProject.vue  PayGroup.vue  PaymentDetails.vue  PaymentRow.vue  ProjectHistory.vue
bil-ui/src/plugins/: vuetify.js
bil-ui/src/router/: index.js
