[tool.poetry]
name = "bil"
version = "0.1.0"
description = "Personal finance tracking system api"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
dulwich = "^0.22.1"
python-multipart = "^0.0.10"
python-magic = "^0.4.27"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-watch = "^4.2.0"
pyfakefs = "^5.6.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120